--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "stateful-elements",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A library for creating stateful web components",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "lite-server"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["web-components", "state-management", "custom-elements"],
+  "author": "Your Name",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jsdom": "^18.0.0",
+    "lite-server": "^2.6.1"
   }
 }
