--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "jest": {
-    "transform": {
-      "^.+\\.js$": "babel-jest"
-    },
-    "testEnvironment": "node",
-    "moduleNameMapper": {
-      "^(\\.{1,2}/.*)\\.js$": "$1"
-    },
-    "verbose": true
-  },
   "scripts": {
-    "test": "jest"
+    "test:verbose": "jest --verbose",
+    "test:silent": "jest --silent",
+    "test:bail": "jest --bail",
+    "test:specific": "jest --testNamePattern",
+    "test:specificPath": "jest --testPathPattern",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:updateSnapshot": "jest --updateSnapshot",
+    "test:runInBand": "jest --runInBand",
+    "test:detectOpenHandles": "jest --detectOpenHandles"
   },
   "presets": [
     "@babel/preset-env"
@@ -22,11 +21,12 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
-    "@jest/globals": "^29.7.0",
+    "@happy-dom/global-registrator": "^13.7.0",
     "@testing-library/jest-dom": "^6.4.2",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-environment-node": "^29.7.0"
+    "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "happy-dom": "^13.7.0"
   }
 }
